# chess-explorer

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bases/: database.surql
src-tauri/capabilities/: main.json  migrated.json
src-tauri/src/: main.rs
src-tauri/src/model/base/: base.rs
src-tauri/src/pgn-parser/: pgn_parser.rs
src-tauri/src/utils/: mod.rs  utils.rs
src/lib/components/: Greet.svelte  Query.svelte
src/lib/components/ui/button/: button.svelte
src/routes/: +page.svelte
src/routes/pgn-parser/: +page.svelte
