[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Bartosz Sowul"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [] }
surrealdb = { version = "1.1.1", features = ["kv-rocksdb"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.56"
chrono = { version = "0.4.33", features = ["serde"] }
lazy_static = "1.4.0"
async_once = "0.2.6"
tauri-plugin-dialog = "2.0.0-beta.1"
tauri-plugin-fs = "2.0.0-beta.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
